<resources>
    <string name="app_name">GoodSpaceSample</string>
    <string name="find_work_opportunities">Find work opportunities</string>
    <string name="circle_image">Circle Image</string>
    <string name="please_enter_number">Please enter your phone number to sign in using GoodSpace account.</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="country_flag">country flag</string>
    <string name="you_will_receive_otp">You will receive a 4 digit OTP.</string>
    <string name="get_otp">Get OTP</string>
    <string name="goodspace">GoodSpace</string>
    <string name="four_digit_otp">4 digit OTP.</string>
    <string name="otp_sent_to_your_number">OTP sent to your number</string>
    <string name="unprocessable_entity">Unprocessable Entity</string>
    <string name="your_otp_has_been_verified">Your OTP has been successfully verified</string>
    <string name="edit_phone_number">Edit Phone number</string>
    <string name="edit_number_image">edit number image</string>
    <string name="enter_otp_to_confirm_your_phone">Enter OTP to confirm your phone</string>
    <string name="you_ll_receive_a_four_digit_verification_code">You\'ll receive a four digit verification code.</string>
    <string name="didn_t_receive_otp">Didn\'t receive OTP?</string>
    <string name="resend">Resend</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp_sent_to">OTP sent to +1</string>
    <string name="xxxxxxxxxxx"> xxxxxxxxxxx</string>
    <string name="enter_correct_phone_number">Enter Correct Phone Number</string>
    <string name="please_be_sure_to_select_the_correct_country_code">Please be sure to select the correct country code.</string>
    <string name="work">Work</string>
    <string name="recruit">Recruit</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="please_wait_while_we_are_loading_your_data">Please wait while we are loading your data</string>
    <string name="profile_image">Profile Image</string>
    <string name="notification_icon">Notification Icon</string>
    <string name="segment">Segment</string>
    <string name="step_into_future">Step into future</string>
    <string name="kamini">Kamini</string>
    <string name="ai_career_counsellor">AI Career Counsellor</string>
    <string name="jobs_for_you">Jobs for you</string>
    <string name="share_button">Share Button Image</string>
    <string name="android_developer">Android Developer</string>
    <string name="work_location_icon">work location icon</string>
    <string name="_25_30_lpa">25 - 30 LPA</string>
    <string name="apply">Apply</string>
    <string name="no_premium_product_available">No Premium Product available</string>
    <string name="required_exp">%1$d - %2$d Years</string>
</resources>