<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.goodspacesample.presentation.views.get_otp.MainActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        tools:context=".presentation.views.verify_otp.VerifyOtpFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_top_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/edit_phn_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/edit_phone_number"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@id/iv_edit"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_edit"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="25dp"
                android:contentDescription="@string/edit_number_image"
                android:src="@drawable/ic_edit"
                app:layout_constraintBottom_toBottomOf="@id/edit_phn_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/edit_phn_number" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_otp_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:text="@={viewModel.otpSentText, default= @string/otp_sent_to}"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/tv_enter_otp_to_confirm"
            app:layout_constraintEnd_toStartOf="@id/tv_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.2" />


        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={viewModel.mobileNumber,default=@string/xxxxxxxxxxx}"
            android:textColor="@color/light_blue"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_otp_sent"
            app:layout_constraintStart_toEndOf="@id/tv_otp_sent"
            app:layout_constraintTop_toTopOf="@id/tv_otp_sent" />

        <TextView
            android:id="@+id/tv_enter_otp_to_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:text="@string/enter_otp_to_confirm_your_phone"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/tv_you_will_receive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_otp_sent" />

        <TextView
            android:id="@+id/tv_you_will_receive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/you_ll_receive_a_four_digit_verification_code"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/et_otp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_enter_otp_to_confirm" />

        <com.example.goodspacesample.util.CustomEditTextForOtpVerify
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="25dp"
            app:layout_constraintTop_toBottomOf="@id/tv_you_will_receive"
            app:layout_constraintBottom_toTopOf="@id/tv_didnt_receive_otp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/tv_didnt_receive_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="20dp"
            android:text="@string/didn_t_receive_otp"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/btn_verify_otp"
            app:layout_constraintEnd_toStartOf="@id/tv_resend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_otp" />

        <TextView
            android:id="@+id/tv_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/resend"
            android:textSize="16sp"
            android:textColor="@color/light_blue"
            app:layout_constraintBottom_toBottomOf="@id/tv_didnt_receive_otp"
            app:layout_constraintStart_toEndOf="@id/tv_didnt_receive_otp"
            app:layout_constraintTop_toTopOf="@id/tv_didnt_receive_otp" />

        <Button
            android:id="@+id/btn_verify_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="35dp"
            android:backgroundTint="@color/light_blue"
            android:paddingVertical="12dp"
            android:text="@string/verify_otp"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>