<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.views.work_screen.WorkFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_circular_avatar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_margin="5dp"
            android:backgroundTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile_image"
                android:src="@drawable/avatar"
                android:scaleType="fitCenter"
                />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/iv_notification"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@mipmap/ic_notification"
            android:paddingVertical="12dp"
            android:background="@color/white"
            android:contentDescription="@string/notification_icon"
            app:layout_constraintTop_toTopOf="@id/cv_circular_avatar"
            app:layout_constraintBottom_toBottomOf="@id/cv_circular_avatar"
            app:layout_constraintEnd_toStartOf="@id/iv_segment"/>

        <ImageView
            android:id="@+id/iv_segment"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:paddingVertical="12dp"
            android:src="@mipmap/ic_segment"
            android:background="@color/white"
            android:contentDescription="@string/segment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cv_circular_avatar"
            app:layout_constraintBottom_toBottomOf="@id/cv_circular_avatar"/>

        <ImageView
            android:id="@+id/step_into_future"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/step_into_future"
            android:src="@drawable/step_into_future_img"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_circular_avatar"
            app:layout_constraintWidth_percent="0.5" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_premium_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="20dp"
            tools:itemCount="1"
            tools:listitem="@layout/layout_premium_products"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step_into_future"
            app:layout_constraintBottom_toTopOf="@id/tv_jobs_for_you"
            />

        <TextView
            android:id="@+id/tv_no_premium_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_premium_product_available"
            android:gravity="center"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/img_background"
            android:textColor="@color/black"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/step_into_future"
            app:layout_constraintBottom_toTopOf="@id/tv_jobs_for_you"
            />

        <TextView
            android:id="@+id/tv_jobs_for_you"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/light_blue"
            android:textStyle="bold"
            android:text="@string/jobs_for_you"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_premium_products"/>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            app:iconifiedByDefault="false"
            app:queryHint="Search Jobs..."
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_jobs_for_you" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_jobs"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="10dp"
            tools:listitem="@layout/layout_job_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_view"
            app:layout_constraintBottom_toBottomOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/please_wait_while_we_are_loading_your_data"
            app:layout_constraintTop_toBottomOf="@id/progress_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>